cambia las imagenes de fotos XD se me olvido

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <div class="card__table">
                 <div class="card__element">
                     <p class="card__name">integrante</p>
-                    <img class="" src="/images/face3.jpg" alt="" width="150px">
+                    <img class="card_img" src="/images/face3.jpg" alt="" width="150px">
 
                     <div class="card__items">
                         <p>Hugo Roberto Gutierrez Lopez</p>
