agregue algo a las imagenes

--- a/index.html
+++ b/index.html
@@ -142,9 +142,11 @@
             <h2 class="subtitle">Integrantes de Grupo</h2>
 
             <div class="card__table">
+
+
                 <div class="card__element">
                     <p class="card__name">integrante</p>
-                    <img class="card_img" src="/images/face3.jpg" alt="" width="150px">
+                    <img class="card_img" src="/images/face3.jpg" alt="imagenXD" width="150px">
 
                     <div class="card__items">
                         <p>Hugo Roberto Gutierrez Lopez</p>
@@ -156,7 +158,7 @@
 
                 <div class="card__element price__element--best">
                     <p class="card__name">Coordinador</p>
-                    <img src="/images/face4.jpg" alt="" width="150px">
+                    <img src="/images/face4.jpg" alt="imagenXD" width="150px">
 
                     <div class="card__items">
                         <p>Antony Ramiro Santos Lopez</p>
@@ -168,7 +170,7 @@
 
                 <div class="card__element">
                     <p class="card__name">Integrante</p>
-                    <img src="/images/face2.jpg" alt="" width="150px">
+                    <img src="/images/face2.jpg" alt="imagenXD" width="150px">
 
                     <div class="card__items">
                         <p>Melanie Mariana Morales Lopez</p>
@@ -392,5 +394,4 @@
     <script src="./js/questions.js"></script>
     <script src="./js/menu.js"></script>
 </body>
-
 </html>
