--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                     <p class="about__paragraph">
                         Charla en el colegio americano
                     </p>
-                    <img src="/images/Imagen2.png" alt="Inicio de instalación de Linux en Xbox">
+                    <img src="./images/Imagen2.png" alt="Inicio de instalación de Linux en Xbox">
                     <figcaption>Var pagina de charlas</figcaption>
-                    <a href="https://drive.google.com/drive/folders/138_wqHYmM3iqA_bnKofhiOg9tjjlb0-v?usp=sharing" target="_blank" class="btn-drive"><i class="bi bi-code-slash"> ir a la pagina </i></a>
+                    <a href="/presentacion.html" target="_blank" class="btn-drive"><i class="bi bi-code-slash"> ir a la pagina </i></a>
                 </figure>
             </div>
             <div class="linux-gallery">
@@ -56,7 +56,7 @@
                     <p class="about__paragraph">
                         Pagina que resuelve los procesos por las metodos de FCFS, Prieridad, SJF y RR
                     </p>
-                    <img src="/images/SJF.png" alt="Inicio de instalación de Linux en Xbox">
+                    <img src="./images/SJF.png" alt="Inicio de instalación de Linux en Xbox">
                     <figcaption>Visitar pagina</figcaption>
                     <a href="https://huroncito16.github.io/AnalyTICs-3.0/" target="_blank" class="btn-drive"><i class="bi bi-code-slash"> ir a la pagina </i></a>
                 </figure>
@@ -67,7 +67,7 @@
                     <p class="about__paragraph">
                         Instalación de una de Linux en una consola Xbox, haciendo funcional en la consola
                     </p>
-                    <img src="/images/Imagen1.png" alt="Inicio de instalación de Linux en Xbox">
+                    <img src="./images/Imagen1.png" alt="Inicio de instalación de Linux en Xbox">
                     <figcaption>instalacion de Linux en un XBOX 360</figcaption>
                     <a href="https://drive.google.com/drive/folders/138_wqHYmM3iqA_bnKofhiOg9tjjlb0-v?usp=sharing" target="_blank" class="btn-drive"><i class="bi bi-link-45deg"></i> Ver Drive</a>
                 </figure>
@@ -78,7 +78,7 @@
                     <p class="about__paragraph">
                         Creacion sencilla de una distribucion personalizada de linux para programadores
                     </p>
-                    <img src="/images/Install-IntelliJ-IDEA-on-Ubuntu-22.04-20.04.png" alt="Inicio de instalación de Linux en Xbox">
+                    <img src="./images/Install-IntelliJ-IDEA-on-Ubuntu-22.04-20.04.png" alt="Inicio de instalación de Linux en Xbox">
                     <figcaption>Linux personalizado</figcaption>
                     <a href="https://drive.google.com/drive/folders/194xGKGOjLM8twes9rn0CQ3XiYZn5F-Ls?usp=sharing" target="_blank" class="btn-drive"><i class="bi bi-link-45deg"></i> Ver Drive</a>
                 </figure>
