Update link to presentation page with new URL

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     </p>
                     <img src="./images/Imagen2.png" alt="Inicio de instalación de Linux en Xbox">
                     <figcaption>Var pagina de charlas</figcaption>
-                    <a href="/presentacion.html" target="_blank" class="btn-drive"><i class="bi bi-code-slash"> ir a la pagina </i></a>
+                    <a href="https://huroncito16.github.io/Pagina-SysOp/presentacion.html" target="_blank" class="btn-drive"><i class="bi bi-code-slash"> ir a la pagina </i></a>
                 </figure>
             </div>
             <div class="linux-gallery">
