Update image paths to relative URLs in integrantes.html

--- a/integrantes.html
+++ b/integrantes.html
@@ -14,7 +14,7 @@
         <nav class="nav container">
             <ul class="nav__link nav__link--menu">
                 <li class="nav__items">
-                    <a href="/index.html" class="nav__links"><i class="bi bi-arrow-left-circle"> Regresar</i></a>
+                    <a href="./index.html" class="nav__links"><i class="bi bi-arrow-left-circle"> Regresar</i></a>
                 </li>
             </ul>
             <div class="nav__menu">
@@ -35,7 +35,7 @@
 
                 <div class="card__element">
                     <p class="card__name">integrante</p>
-                    <img class="card_img" src="/images/face3.jpg" alt="imagenXD" width="150px">
+                    <img class="card_img" src="./images/face3.jpg" alt="imagenXD" width="150px">
 
                     <div class="card__items">
                         <p>Hugo Roberto Gutierrez Lopez</p>
@@ -47,7 +47,7 @@
 
                 <div class="card__element price__element--best">
                     <p class="card__name">Coordinador</p>
-                    <img src="/images/face4.jpg" alt="imagenXD" width="150px">
+                    <img src="./images/face4.jpg" alt="imagenXD" width="150px">
 
                     <div class="card__items">
                         <p>Antony Ramiro Santos Lopez</p>
@@ -59,7 +59,7 @@
 
                 <div class="card__element">
                     <p class="card__name">Integrante</p>
-                    <img src="/images/face2.jpg" alt="imagenXD" width="150px">
+                    <img src="./images/face2.jpg" alt="imagenXD" width="150px">
 
                     <div class="card__items">
                         <p>Melanie Mariana Morales Lopez</p>
