--- a/presentacion.html
+++ b/presentacion.html
@@ -14,7 +14,7 @@
         <nav class="nav container">
             <ul class="nav__link nav__link--menu">
                 <li class="nav__items">
-                    <a href="/index.html" class="nav__links"><i class="bi bi-arrow-left-circle"> Regresar</i></a>
+                    <a href="./index.html" class="nav__links"><i class="bi bi-arrow-left-circle"> Regresar</i></a>
                 </li>
             </ul>
             <div class="nav__menu">
