--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <nav class="nav container">
             <ul class="nav__link nav__link--menu">
                 <li class="nav__items">
-                    <a href="/presentacion.html" class="nav__links">Presentacion</a>
+                    <a href="https://huroncito16.github.io/Pagina-SysOp/presentacion.html" class="nav__links">Presentacion</a>
                 </li>
                 <li class="nav__items">
-                    <a href="/integrantes.html" class="nav__links">Integrantes</a>
+                    <a href="https://huroncito16.github.io/Pagina-SysOp/integrantes.html" class="nav__links">Integrantes</a>
                 </li>
             </ul>
 
