Update link in index.html to remove query parameters

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     </p>
                     <img src="./images/Install-IntelliJ-IDEA-on-Ubuntu-22.04-20.04.png" alt="Inicio de instalación de Linux en Xbox">
                     <figcaption>Linux personalizado</figcaption>
-                    <a href="https://drive.google.com/file/d/1ja2k3_hdLCOCQ3x4gcjIVLPm9U_5CbWd/view?usp=drivesdk" target="_blank" class="btn-drive"><i class="bi bi-link-45deg"></i> Ver Drive</a>
+                    <a href="https://drive.google.com/file/d/1ja2k3_hdLCOCQ3x4gcjIVLPm9U_5CbWd/view" target="_blank" class="btn-drive"><i class="bi bi-link-45deg"></i> Ver Drive</a>
                 </figure>
             </div>
         </section>
